[package]
name = "amino_api"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
serde_repr = "0.1.5"
lazy_static = "1.4.0"
failure = "0.1.5"
tokio = "=0.2.0-alpha.5"
urlencoding = "1.0.0"

[dev-dependencies]
dotenv = "0.14.1"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
features = ["json"]

[dependencies.futures-preview]
version = "=0.3.0-alpha.18"
features = ["async-await", "nightly"]

[dependencies.chrono]
version = "0.4.9"
features = ["serde"]

[dependencies.uuid]
version = "0.7.4"
features = ["v4", "serde"]
